--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <main class="page-main">
         <div class="promo">
             <p class="promo__title">Не просто <span>бизнес-</span>образование</p>
-            <p class="promo__text promo__text--size">Школа бизнеса «Каменный город» – это актуальное образование для руководителей и менеджеров от топовых экспертов и лидеров рынка.</p>
+            <p class="promo__text promo__text--size">Школа бизнеса «Каменный город» – это актуальное образование для руководителей <br>и менеджеров от топовых экспертов и лидеров рынка.</p>
             <p class="promo__title">Успех в цифрах</p>
             <p class="promo__text promo__text--hidden">Успех в бизнесе подтверждают не слова, а цифры. Мы уверены в своём лидерстве в области бизнес образования, и знаем, как помочь вашей компании добиваться стабильного успеха.</p>
         </div>
